# shopify-data-engine

./: .gitignore  README.md
.mcp/snowflake/: tools_config.yaml
airflow/: Dockerfile  entrypoint.sh
airflow/dags/: shopify_sync_dag.py
aws-infrastructure/: README.md  iam-deployer-policy.json.example
aws-infrastructure/environments/production/: .terraform.lock.hcl  ecr.tf  ecr.yml  ecs_clusters.tf  ecs_clusters.yml  ecs_services.tf  ecs_services.yml  ecs_tasks.tf  ecs_tasks.yml  efs.tf  efs.yml  http_apis.tf  http_apis.yml  iam_roles.tf  iam_roles.yml  lambdas.tf  lambdas.yml  log_groups.tf  log_groups.yml  (+5 more)
dbt/: .env.example  README.md  dbt_project.yml  profiles.yml.example  requirements.txt
dbt/snapshots/: schema.yml  snapshot_shopify__orders.sql
ingestion/: .env.example  Dockerfile.webhook  README.md  pyproject.toml
ingestion/scripts/: register_webhooks.py  sync_orders.py
ingestion/src/shopify_engine/: cli.py  config.py
ingestion/src/shopify_engine/extractors/: products.py
ingestion/src/shopify_engine/shopify/: bulk.py  client.py  queries.py  webhooks.py
ingestion/src/shopify_engine/snowflake/: connection.py  loader.py
ingestion/src/shopify_engine/sync/: orchestrator.py
ingestion/src/shopify_engine/webhook/: handler.py  verify.py
ingestion/tests/: test_bulk_reassembly.py  test_snowflake_loader.py  test_webhook_handler.py  test_webhook_registration.py  test_webhook_verify.py
terraform/: README.md  access.tf  main.tf  outputs.tf  providers.tf  tables.tf  variables.tf
terraform/ecs/: main.tf  variables.tf
tests/: test_shopify_client.py
(+83 files in other folders)
